--- a/ModelSkeletalGSoC.ipynb
+++ b/ModelSkeletalGSoC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,20 +124,20 @@
     "while(i<len(Normal) and j<len(Anomaly)):\n",
     "    \n",
     "    if i%ratio:\n",
-    "        if (Normal[i].shape[0]==1024):\n",
-    "            Normal[i] = cv2.resize(Normal[i]  , (512 , 512))  \n",
-    "        train_images.append(np.reshape(Normal[i],(512,512,1)))\n",
+    "        if (Normal[i].shape[0]==512):\n",
+    "            Normal[i] = cv2.resize(Normal[i]  , (1024 , 1024))  \n",
+    "        train_images.append(np.reshape(Normal[i],(1024,1024,1)))\n",
     "        train_labels.append([0])\n",
     "\n",
     "    if not i%ratio:\n",
-    "        if (Anomaly[j].shape[0]==1024):\n",
-    "            Anomaly[j] = cv2.resize(Anomaly[j]  , (512 , 512))            \n",
-    "        train_images.append(np.reshape(Anomaly[j],(512 , 512 , 1)))\n",
+    "        if (Anomaly[j].shape[0]==512):\n",
+    "            Anomaly[j] = cv2.resize(Anomaly[j]  , (1024 , 1024))            \n",
+    "        train_images.append(np.reshape(Anomaly[j],(1024 , 1024 , 1)))\n",
     "        train_labels.append([1])\n",
     "        j+=1\n",
-    "        if (Normal[i].shape[0]==1024):\n",
-    "            Normal[i] = cv2.resize(Normal[i]  , (512 , 512)) \n",
-    "        train_images.append(np.reshape(Normal[i],(512 , 512,1)))\n",
+    "        if (Normal[i].shape[0]==512):\n",
+    "            Normal[i] = cv2.resize(Normal[i]  , (1024 , 1024)) \n",
+    "        train_images.append(np.reshape(Normal[i],(1024 , 1024 , 1)))\n",
     "        train_labels.append([0])\n",
     "        \n",
     "\n",
@@ -230,18 +230,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential_1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "conv2d_4 (Conv2D)            (None, 1023, 1023, 64)    320       \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2 (None, 511, 511, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_5 (Conv2D)            (None, 511, 511, 64)      4160      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_4 (MaxPooling2 (None, 255, 255, 64)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_6 (Conv2D)            (None, 255, 255, 16)      1040      \n",
+      "_________________________________________________________________\n",
+      "max_pooling2d_5 (MaxPooling2 (None, 127, 127, 16)      0         \n",
+      "_________________________________________________________________\n",
+      "conv2d_7 (Conv2D)            (None, 127, 127, 16)      272       \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 258064)            0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 16)                4129040   \n",
+      "_________________________________________________________________\n",
+      "dense_3 (Dense)              (None, 2)                 34        \n",
+      "=================================================================\n",
+      "Total params: 4,134,866\n",
+      "Trainable params: 4,134,866\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
-    "inputshape = (512, 512, 1)\n",
+    "inputshape = (1024, 1024, 1)\n",
     "model = models.Sequential()\n",
     "model.add(layers.Conv2D(64, (2, 2), activation='relu', input_shape=inputshape))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
-    "model.add(layers.Conv2D(32, (1, 1), activation='relu'))\n",
+    "model.add(layers.Conv2D(64, (1, 1), activation='relu'))\n",
     "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.Conv2D(16, (1, 1), activation='relu'))\n",
-    "model.add(layers.MaxPooling2D((5, 5)))\n",
+    "model.add(layers.MaxPooling2D((2, 2)))\n",
     "model.add(layers.Conv2D(16, (1, 1), activation='relu'))\n",
     "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(16, activation='relu'))\n",
@@ -255,8 +290,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_file = './model_arch.png'\n",
-    "tf.keras.utils.plot_model(model, to_file=img_file, show_shapes=True, show_layer_names=True)"
+    "'''img_file = './model_arch.png'\n",
+    "tf.keras.utils.plot_model(model, to_file=img_file, show_shapes=True, show_layer_names=True)'''"
    ]
   },
   {
@@ -279,14 +314,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(history.history['accuracy'], label='accuracy')\n",
+    "'''plt.plot(history.history['accuracy'], label='accuracy')\n",
     "plt.plot(history.history['val_accuracy'], label = 'val_accuracy')\n",
     "plt.xlabel('Epoch')\n",
     "plt.ylabel('Accuracy')\n",
     "plt.ylim([0.5, 1])\n",
     "plt.legend(loc='lower right')\n",
     "\n",
-    "test_loss, test_acc = model.evaluate(test_images,  test_labels, verbose=2)"
+    "test_loss, test_acc = model.evaluate(test_images,  test_labels, verbose=2)'''"
    ]
   },
   {
