--- a/ModelSkeletalGSoC.ipynb
+++ b/ModelSkeletalGSoC.ipynb
@@ -12,7 +12,8 @@
     "from tensorflow.keras import datasets, layers, models\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
-    "%matplotlib inline"
+    "import random\n",
+    "#%matplotlib inline"
    ]
   },
   {
@@ -30,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
+    "#%%bash\n",
     "#sh ./*.sh\n",
     "\n",
     "#INSERT HELPER SCRIPTS HERE"
@@ -42,8 +43,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "imgDirNorm = 'E:/Normal Train Data/'\n",
-    "imgDirAnom = 'E:/Anomaly Train Data/'"
+    "imgDirNorm = './Normal/'\n",
+    "imgDirAnom = './Anomaly/'"
    ]
   },
   {
@@ -108,13 +109,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print('LOAD FROM DISK...........')\n",
+    "\n",
     "Anomaly = load_images_from_folder(imgDirAnom)\n",
     "Normal = load_images_from_folder(imgDirNorm)\n",
+    "\n",
+    "print('DISK LOAD COMPLETE!')\n",
+    "\n",
+    "print('IMAGE AUGMENT')\n",
+    "augmented_images = augment_folder(imgDirAnom)\n",
+    "Anomaly = Anomaly + augmented_images\n",
+    "print('IMAGE AUGMENT COMPLETE')\n",
+    "\n",
+    "print('NORMAL IMAGES : ' + len(Normal))\n",
+    "print('ANOMALOUS IMAGES : ' + len(Anomaly))\n",
+    "\n",
+    "print('DATA SHUFFLE')\n",
+    "Anomaly=random.shuffle(random.shuffle(Anomaly))\n",
+    "Normal=random.shuffle(random.shuffle(Normal))\n",
+    "print('SHUFFLE COMPLETE')\n",
     "\n",
     "train_images=[]\n",
     "train_labels=[]\n",
     "test_images=[] \n",
     "test_labels=[]\n",
+    "\n",
+    "print('LABLE CREATION')\n",
     "\n",
     "ratio = len(Normal)//len(Anomaly)\n",
     "\n",
@@ -142,9 +162,7 @@
     "        \n",
     "\n",
     "    i+=1\n",
-    "\n",
-    "print(len(Normal))\n",
-    "print(len(Anomaly))\n",
+    "print('LABELING COMPLETE')\n",
     "\n",
     "class_names = ['Clean', 'Anomaly Present']"
    ]
@@ -155,22 +173,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "augmented_images = augment_folder(imgDirAnom)\n",
-    "Anomaly = Anomaly + augmented_images\n",
-    "\n",
-    "print(len(Anomaly))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "train_images=np.array(train_images)/255.0\n",
-    "train_labels=np.array(train_labels)/255.0\n",
+    "#train_labels=np.array(train_labels)/255.0\n",
     "test_images=np.array(test_images)/255.0 \n",
-    "test_labels=np.array(test_labels)/255.0"
+    "#test_labels=np.array(test_labels)/255.0"
    ]
   },
   {
@@ -195,8 +201,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_images=train_images[0:100]\n",
-    "test_labels=train_labels[0:100]\n",
+    "test_images=train_images[2200:len(train_images)]\n",
+    "train_images=train_images[0:2200]\n",
+    "\n",
+    "test_labels=train_labels[2200:len(train_labels)]\n",
+    "train_labels=train_labels[0:2200]\n",
     "\n",
     "print((train_images[0]).shape)\n",
     "print(type(train_images))\n",
@@ -304,7 +313,7 @@
     "              loss=tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True),\n",
     "              metrics=['accuracy'])\n",
     "\n",
-    "history = model.fit(train_images, train_labels, epochs=50, \n",
+    "history = model.fit(train_images, train_labels, epochs=10, \n",
     "                    validation_data=(test_images, test_labels))"
    ]
   },
@@ -329,7 +338,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
