--- a/ModelSkeletalGSoC.ipynb
+++ b/ModelSkeletalGSoC.ipynb
@@ -121,8 +121,8 @@
     "Anomaly = Anomaly + augmented_images\n",
     "print('IMAGE AUGMENT COMPLETE')\n",
     "\n",
-    "print('NORMAL IMAGES : ' + len(Normal))\n",
-    "print('ANOMALOUS IMAGES : ' + len(Anomaly))\n",
+    "print('NORMAL IMAGES : ' , len(Normal))\n",
+    "print('ANOMALOUS IMAGES : ' , len(Anomaly))\n",
     "\n",
     "print('DATA SHUFFLE')\n",
     "Anomaly=random.shuffle(random.shuffle(Anomaly))\n",
