--- a/ModelSkeletalGSoC.ipynb
+++ b/ModelSkeletalGSoC.ipynb
@@ -116,6 +116,9 @@
     "\n",
     "print('DISK LOAD COMPLETE!')\n",
     "\n",
+    "print('NORMAL IMAGES : ' , len(Normal))\n",
+    "print('ANOMALOUS IMAGES : ' , len(Anomaly))\n",
+    "\n",
     "print('IMAGE AUGMENT')\n",
     "augmented_images = augment_folder(imgDirAnom)\n",
     "Anomaly = Anomaly + augmented_images\n",
@@ -125,8 +128,8 @@
     "print('ANOMALOUS IMAGES : ' , len(Anomaly))\n",
     "\n",
     "print('DATA SHUFFLE')\n",
-    "Anomaly=random.shuffle(random.shuffle(Anomaly))\n",
-    "Normal=random.shuffle(random.shuffle(Normal))\n",
+    "Anomaly=random.shuffle(Anomaly)\n",
+    "Normal=random.shuffle(Normal)\n",
     "print('SHUFFLE COMPLETE')\n",
     "\n",
     "train_images=[]\n",
