--- a/ModelSkeletalGSoC.ipynb
+++ b/ModelSkeletalGSoC.ipynb
@@ -132,6 +132,9 @@
     "Normal=random.shuffle(Normal)\n",
     "print('SHUFFLE COMPLETE')\n",
     "\n",
+    "print('NORMAL IMAGES : ' , len(Normal))\n",
+    "print('ANOMALOUS IMAGES : ' , len(Anomaly))\n",
+    "\n",
     "train_images=[]\n",
     "train_labels=[]\n",
     "test_images=[] \n",
