--- a/ModelSkeletalGSoC.ipynb
+++ b/ModelSkeletalGSoC.ipynb
@@ -128,8 +128,10 @@
     "print('ANOMALOUS IMAGES : ' , len(Anomaly))\n",
     "\n",
     "print('DATA SHUFFLE')\n",
-    "Anomaly=random.shuffle(Anomaly)\n",
-    "Normal=random.shuffle(Normal)\n",
+    "random.shuffle(Anomaly)\n",
+    "random.shuffle(Normal)\n",
+    "random.shuffle(Anomaly)\n",
+    "random.shuffle(Normal)\n",
     "print('SHUFFLE COMPLETE')\n",
     "\n",
     "print('NORMAL IMAGES : ' , len(Normal))\n",
